# ResistanceRecon

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DISCLAIMER  LICENSE  NOTICE  README.md  pyproject.toml
.claude/agents/: senior-reviewer.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  task.md
.github/workflows/: add-to-project.yml  ci.yml
Documentation/: DATASHEET.md  MODEL_CARD.md  README.md  roadmap.md
Documentation/01-introduction-and-goals/: README.md  challenge-brief.md  prd.md
Documentation/02-constraints/: README.md
Documentation/03-context-and-scope/: README.md
Documentation/04-solution-strategy/: README.md
Documentation/05-building-block-view/: README.md
Documentation/06-runtime-view/: README.md
Documentation/07-deployment-view/: README.md
Documentation/08-crosscutting-concepts/: README.md
Documentation/09-architecture-decisions/: ADR-0001-self-sourced-bvbrc-data.md  ADR-0002-amrfinderplus-via-docker-wsl2.md  ADR-0003-classical-ml-per-antibiotic-logistic-regression.md  ADR-0004-calibration-and-conformal-prediction-for-no-call.md  ADR-0005-homology-aware-grouped-split.md  ADR-0006-llm-boundary-rag-reviewer-report-only.md  ADR-0007-streamlit-fastapi-demo-stack.md  ADR-0008-species-scope-kpneumoniae-first.md  ADR-0009-pyarrow-parquet-engine.md  ADR-0009-versioning-and-release-control.md  ADR-0010-draft-pr-change-control-lifecycle.md  ADR-0011-pyarrow-parquet-engine.md  ADR-0012-pure-python-bvbrc-fetch.md  ADR-0013-pinned-reference-gene-catalog.md  ADR-0014-mlflow-experiment-tracking.md  ADR-0015-homology-split-mlst-singleton-fallback.md  ADR-0016-https-bvbrc-data-api-fetch.md  ADR-0017-binary-sir-collapse-policy.md  ADR-0018-deterministic-gate-one-directional.md  ADR-0019-evidence-rag-offline-embedding-and-rrf.md  ADR-0020-evidence-tagging-and-fail-closed-narrative-envelope.md  ADR-0021-default-llm-gpt56-luna-xhigh-reasoning.md  ADR-0022-in-process-orchestrator-demo.md  ADR-0023-reviewer-per-drug-number-binding.md  ADR-0024-eval-harness-rescore-reproduced-split.md  README.md
Documentation/10-quality-requirements/: README.md
Documentation/11-risks-and-technical-debt/: README.md
Documentation/12-glossary/: README.md
Documentation/research-findings/: README.md  amrfinderplus-features.md  antibiotic-panel.md  architecture.md  bv-brc-data-access.md  llm-boundary.md  ml-methodology.md  se-scaffolding.md
ground-truth/: README.md  dataset_composition.json  decisions.jsonl  session-log-template.md
models/: eval_summary.json  registry.json  results_summary.json
scripts/: build_dataset.py  build_feature_matrix.py  check_import_boundary.py  demo_report_narrative.py  fetch_bvbrc_data.py  run_eval.py  train_predictor.py
src/genome_firewall/: __init__.py  constants.py  schemas.py  service.py
tests/: _demo.py  _netguard.py  conftest.py  test_schemas.py  test_smoke.py
tests/annotation/: test_amrfinder.py  test_mock.py  test_tsv.py
tests/api/: conftest.py  test_api_shape6.py  test_errors.py
tests/eval/: conftest.py  test_eval_integration.py  test_metrics.py
tests/features/: test_feature_matrix.py  test_mechanisms.py  test_vocabulary.py
tests/kb/: conftest.py  test_bm25.py  test_corpus.py  test_embedder.py  test_evidence_rag.py  test_hybrid_rrf.py  test_loader.py  test_no_sentence_transformer_construction.py
tests/llm/: conftest.py  test_factory.py  test_mock_client.py  test_openai_backend.py  test_types_errors.py
tests/predictor/: conftest.py  test_binary_collapse.py  test_calibration.py  test_conformal.py  test_dataset.py  test_experiment_tracking.py  test_model_registry.py  test_predict.py  test_predict_integration.py  test_split.py  test_subset.py  test_target_gate.py  test_training_integration.py
tests/reader/: test_fasta_parser.py  test_feature_builder.py  (+1 more)
(+135 files in other folders)
