[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genome-firewall"
version = "0.1.0"
description = "Defensive AI decision-support: predict antibiotic response from a reconstructed bacterial genome (Klebsiella pneumoniae)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sebastian Wienhold" }, { name = "Genome Firewall contributors" }]
keywords = ["antimicrobial-resistance", "amr", "bioinformatics", "genomics", "machine-learning", "conformal-prediction", "defensive-ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "biopython>=1.83",
  "pandas>=2.2",
  "pyarrow>=16",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "joblib>=1.4",
]

[project.optional-dependencies]
ml = ["crepes>=0.7", "mapie>=0.9", "shap>=0.45"]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "jinja2>=3.1"]
ui = ["streamlit>=1.36", "plotly>=5.22"]
llm = ["openai>=1.35"]
rag = ["rank-bm25>=0.2.2", "sentence-transformers>=3.0"]
tracking = ["mlflow>=2.14"]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pre-commit>=3.7",
  "pandas-stubs",
  "types-requests",
]

[project.scripts]
genome-firewall = "genome_firewall.cli:main"

[project.urls]
Repository = "https://github.com/cofade/ResistanceRecon"
Documentation = "https://github.com/cofade/ResistanceRecon/tree/main/Documentation"

[tool.hatch.build.targets.wheel]
packages = ["src/genome_firewall"]

# ---------------------------------------------------------------------------
# Layer 2 — Quality Gates (ruff + mypy + bandit + pytest)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "RUF"]
# ARG002 (unused method args) is common in Protocol implementations / mocks.
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S101"]

[tool.mypy]
# Matches the resolved dev toolchain (numpy's bundled stubs use 3.12-only syntax);
# requires-python stays ">=3.11" above, this only controls mypy's own stub parsing.
python_version = "3.12"
strict = true
files = ["src"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
# Third-party libs without complete type stubs.
module = ["crepes.*", "mapie.*", "shap.*", "sklearn.*", "Bio.*", "streamlit.*", "plotly.*", "mlflow.*", "rank_bm25.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.bandit]
# High-severity only in CI; skip assert-in-tests.
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=genome_firewall --cov-branch --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
# lets tests/scripts/test_fetch_bvbrc_live.py `import fetch_bvbrc_data` directly --
# scripts/ is deliberately outside the src/ package (see EPIC 1 plan's boundary map).
pythonpath = ["scripts"]
markers = [
  "integration: end-to-end pipeline tests (mocked annotator, no Docker)",
  "live: tests requiring a live external tool/API (skipped in CI)",
]

[tool.coverage.run]
branch = true
source = ["genome_firewall"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
